	- Fixed the map to update correctly with Bukkit 949+
	- Resized the map to fit the key back on the right.
	- Fixed '/towny prices command'. I guess I broke it in the last dev version.
	- Fixed '/towny war' and it's sub sets to give the proper responses.
	- Added a confirmation message when setting a player mode '/res set mode map'.
	- /resident set mode reset' now has a new alias of '/resident set mode clear'. (old commands are still accepted)
	- '/resident friends clearlist' now has a new alias of '/resident friends clear'. (old commands are still accepted)
	- Added messages for costs when using ./town spawn'.
	- The 'New Day' message no longer mentions taxes if you are not set to take taxes.
v0.71.4:
	- Fixed towny admin commands to only work for admins or from the console.
	- Setting ally and outsider permissions at the resident level now correctly displays friend instead of resident.
	- Fixed an error when removing assistants from both town and nation.
	- Fixed Nation ally permissions to correctly test if you have perms for the area you want to perform the action in.
	- Added Bonemeal, redstone repeaters, noteblock and jukebox to protected items to prevent outsider griefing.
	- Moved chat prefix [Towny] to the language file (english.yml).
	- All chat colouring is now configurable within the language file.
	- disabled /tw wildperm, usedefault and wildignore if using permissions. Add permission nodes for these.
	- Added a fix to prevent players firing from the wild into a PVP disabled town to attack.
	- Added '/town set fire [on/off]' to prevent fire damage/spread in a town.
	- Fixed an error where a town/nation data file may not be moved if a previous town/nation of the same name had been deleted/renamed prior.
V0.71.4 RC2:
    - Added to Wildzone ignore ID's - Wood, flowers, tall grass, leaves, cacti, pumpkins, sugarcane, mushrooms, saplings.
    - Added code to reset world wildzone ignore ID's to default at first run.