@@ -143,7 +143,7 @@ admin_panel_3: 'Run the new day code'
 
 msg_block_claim: 'Claim this town block'
 msg_plot_nfs: 'Take down a plot for sale'
-msg_nfs_abr: '&e''nfs'' is an accepted abreviation for ''notforsale''.'
+msg_nfs_abr: '&e''fs'' and ''nfs'' are accepted abreviations for ''forsale'' and ''notforsale''.'
 msg_plot_fs: 'Put this area up for auction.'
 
 ############################################################
@@ -168,6 +168,7 @@ msg_bankrupt_nation: ' couldn''t afford to remain a nation.'
 msg_nation_not_neutral: '&bNation couldn''t afford it''s neutral state.'
 msg_nation_cant_neutral: '&bNation couldn''t afford to become a neutral nation.'
 msg_nation_set_neutral: '&bSuccessfully changed nation''s neutrality.'
+msg_nation_allow_neutral: '&bNation permissions to remain neutral are now: %s'
 msg_nation_neutral: '&bYour nation is now'
 msg_tax_exempt: '&bTown staff are exempt from taxes.'
 msg_del_nation: '&bThe nation %s was disbanded!'
@@ -247,7 +248,7 @@ msg_nation_set_name: '&b%s renamed nation to %s.'
 msg_changed_pvp: '&cTown PVP has been %s.'
 msg_changed_public: '&cThe Town''s public status is now %s.'
 msg_changed_expl: '&cExplosions in town are now %s.'
-msg_changed_fire: '&Firespread in town is now %s.'
+msg_changed_fire: '&cFirespread in town is now %s.'
 
 msg_world_pvp: '&cThis world is PvP only.'
 msg_reloaded: '&2Towny''s settings were reloaded.'
